--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
+         <meta charset='utf-8'>
         <title>MEDBOX</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
