--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
               </div>
               <div class="currentDetails">
                   <div class="header-option">
-                      <span>Faridabad</span>
+                      <span>Faridabad1</span>
                   </div>
                   <div class="header-option">
                       <span>Choose now</span>
